apps/core/style/app.css
/* ... */
/********** New switch designs **********/

/*	Expected HTML structure:
 *	<label class="monster-switch">
 *		<input type="checkbox">
 *		<span>
 *			<span>On</span>
 *			<span>Off</span>
 *			</span>
 *		<a></a>
 *	</label>
 */

.monster-switch {
	display: inline-block;
	position: relative;
	cursor: pointer;
	margin: 0;

	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.monster-switch > input {
	position: absolute;
	width: 0;
}
.monster-switch > span {
	display: block;
	padding: 4px 14px;
	border-radius: 20px;
	line-height: 20px;
	height: 20px;
	font-family: 'Source Sans Pro';
	font-weight: 600;
	font-size: 14px;
	text-align: center;
	background: #fff;
	border: solid 1px #c0c0c9;
	color: #909099;
	transition: all 0.4s ease-out;
}
.monster-switch > span span {
	display: block;
	height: 0px;
	visibility: hidden;
}
.monster-switch > a {
	width: 22px;
	height: 22px;
	border: solid 1px #c0c0c9;
	border-radius: 15px;
	background: #f0f0f9;
	position: absolute;
	left: 3px;
	top: 3px;
	transition: all 0.2s ease-out;
}
.monster-switch > input:focus + span {
	box-shadow: 0px 0px 2px 0px #0087e0;
}
.monster-switch > input:checked ~ span span:first-child {
	visibility: visible;
}
.monster-switch > input:not(:checked) ~ span span:last-child {
	visibility: visible;
}
.monster-switch > input:checked + span {
	background: #22a5ff;
	border-color: #1e8dd9;
	color: #0d456b;
	padding-right: 34px;
}
.monster-switch > input:not(:checked) + span {
	padding-left: 34px;
}
.monster-switch > input:checked ~ a {
	right: 3px;
	left: initial;
	left: calc(100% - 27px);
	background: #fff;
	border-color: #1e8dd9;
}

/* Quick List */
/* Could be used when we add flags on a carrier, is used when we add recipients to a Voicemail Box in the SmartPBX */
.list-entities .create-entity {
	padding: 15px 0px;
}

.list-entities .create-entity > * {
	color: #CCC;
}

.list-entities .entity-wrapper {
	border: 1px solid #999;
	border-radius: 4px;
	padding: 10px;
}

.list-entities .entity-wrapper:not(:last-child) {
	margin-bottom: 5px;
}

.list-entities .entity-wrapper:not(.placeholder) {
	background: #EEE;
	height: 20px;
	text-align: left;
}

.list-entities .entity-wrapper:not(.placeholder) .delete-entity {
	display: inline-block;
	float: right;
	padding: 0 5px;
}

.list-entities .entity-wrapper:not(.placeholder) .delete-entity:hover {
	cursor: pointer;
	text-shadow: 0px 0px 1px #777;
}

.list-entities .entity-wrapper.placeholder {
	border: 1px dashed #CCC;
}

.list-entities .entity-wrapper.placeholder:not(.active) {
	cursor: pointer;
}

.list-entities .entity-wrapper.placeholder.active,
.list-entities .entity-wrapper.placeholder:hover {
	background: #EEE;
	border: 1px dashed #999;
	color: #333;
}

.list-entities .entity-wrapper.placeholder.active .create-inputs {
	display: inherit;
}

.list-entities .entity-wrapper.placeholder.active .create-text {
	display: none;
}

.list-entities .entity-wrapper.placeholder:hover > i {
	color: #333;
}

.list-entities .entity-wrapper.placeholder i {
	color: #CCC;
	margin-right: 10px;
}

.list-entities .entity-wrapper .create-inputs {
	display: none;
}

.list-entities .entity-wrapper .create-inputs > * {
	margin: 0 0 0 10px;
}

.list-entities .saved-entities {
	max-height: 210px;
	overflow: auto;
}

/********* Custom CSS for Chosen **********/
.chosen-container .chosen-single {
	width: 220px;
	border: 1px solid #cccccc;
	background: #fff;
	box-sizing: border-box;
	height: 30px;
	line-height: 30px;
	border-radius: 4px;
	box-shadow: none;
}
.chosen-container.chosen-with-drop .chosen-single {
	background: #fff;
}

.chosen-container .chosen-drop {
	box-sizing: border-box;
	width: 220px;
}

.chosen-container {
	margin-bottom: 10px;
}

.chosen-container .chosen-single div b {
	background-image: none !important;
	background-color: transparent;
	position: relative;
}

.chosen-container .chosen-single div b:before {
	content: '';
	position: absolute;
	top: 50%;
	right: 7px;
	border-color: #000 transparent;
	transform: translateY(-50%);
	border-style: solid;
	border-width: 6px 3px 0;
}

/* Special rules to fit firefox's dropdown style */
@-moz-document url-prefix() {
	.chosen-container .chosen-single div b {
		border: solid 1px #aaa;
		background-color: #eee;
		box-sizing: border-box;
	}
	.chosen-container .chosen-single div b:before {
		top: 11px;
		right: 4px;
		border-color: #555 transparent;
		border-width: 6px 4px 0px;
		transform: none;
	}
	.chosen-container .chosen-single div b:after {
		content: '';
		position: absolute;
		top: 8px;
		right: 4px;
		border-style: solid;
		border-color: #eee transparent;
		border-width: 6px 4px 0px;
	}
	.chosen-container.chosen-with-drop .chosen-single div b:before {
		border-color: #000 transparent;
	}
	.chosen-container.chosen-with-drop .chosen-single div b {
		background-color: #e7f2fc;
		border-color: #7eb4ea;
	}
}

